force-app/main/default/objects/VR1_Configuration_Settings__c/VR1_Configuration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for VR1</description>
    <label>VR1 Configuration Settings</label>
</CustomObject>