force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Auto_Create_Chatter_Roles__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Chatter_Roles__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Global flag to indicate whether user chatter group memberships should be automatically assigned when a user&apos;s role is updated.</description>
    <inlineHelpText>Global flag to indicate whether user chatter group memberships should be automatically assigned when a user&apos;s role is updated.</inlineHelpText>
    <label>Auto Create Chatter Roles</label>
    <type>Checkbox</type>
</CustomField>