force-app/main/default/objects/VR1_Configuration_Settings__c/fields/B2B_Alert_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Alert_Display_Name__c</fullName>
    <defaultValue>&quot;VR1 Brand Meeting Reports&quot;</defaultValue>
    <description>Descriptor text used on B2B emails.</description>
    <inlineHelpText>Descriptor text used on B2B emails.</inlineHelpText>
    <label>B2B Alert/Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>