force-app/main/default/objects/VR1_Configuration_Settings__c/fields/B2B_Calendar_VRNET_URL__c.field-meta.xml
<CustomField>
    <fullName>B2B_Calendar_VRNET_URL__c</fullName>
    <defaultValue>&quot;http://intranet.valueretail.com/retailgrs/default.aspx&quot;</defaultValue>
    <description>URL of B2B Calendar displayed on VR Net</description>
    <inlineHelpText>URL of B2B Calendar displayed on VR Net</inlineHelpText>
    <label>B2B Calendar VRNET URL</label>
    <type>Url</type>
</CustomField>