force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Brand_to_Deal_Role_Sync_Items__c.field-meta.xml
<CustomField>
    <fullName>Brand_to_Deal_Role_Sync_Items__c</fullName>
    <description>Comma separated list of Brand roles which should be synchronised with associated Deals when the &apos;Synchronise Deal Roles&apos; button is clicked on the Account detail page.</description>
    <inlineHelpText>Comma separated list of Brand roles which should be synchronised with associated Deals when the &apos;Synchronise Deal Roles&apos; button is clicked on the Account detail page.</inlineHelpText>
    <label>Brand to Deal Role Sync Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>