force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Create_Dummy_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Create_Dummy_Opportunities__c</fullName>
    <defaultValue>true</defaultValue>
    <description>lag to indicate whether dummy opportunity records should be created when a brand opportunity is not found. eg. Retail Live Email/B2B Meeting.</description>
    <inlineHelpText>lag to indicate whether dummy opportunity records should be created when a brand opportunity is not found. eg. Retail Live Email/B2B Meeting.</inlineHelpText>
    <label>Create Dummy Opportunities</label>
    <type>Checkbox</type>
</CustomField>