force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Create_Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Create_Village_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This determines whether a village presence record should be created if a village is mentioned in a Brand B2B event.</description>
    <inlineHelpText>This determines whether a village presence record should be created if a village is mentioned in a Brand B2B event.</inlineHelpText>
    <label>Create Village Presence</label>
    <type>Checkbox</type>
</CustomField>