force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Default_Chatter_Groups__c.field-meta.xml
<CustomField>
    <fullName>Default_Chatter_Groups__c</fullName>
    <description>Comma separated list of chatter group search string identifiers which should be included in logic to default chatter role memberships when a user&apos;s role is updated.</description>
    <inlineHelpText>Comma separated list of chatter group search string identifiers which should be included in logic to default chatter role memberships when a user&apos;s role is updated.</inlineHelpText>
    <label>Default Chatter Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>