force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Default_Operations_Department__c.field-meta.xml
<CustomField>
    <fullName>Default_Operations_Department__c</fullName>
    <description>Id of default operations department to be applied to an operation incident where a department is not specified.</description>
    <inlineHelpText>Id of default operations department to be applied to an operation incident where a department is not specified.</inlineHelpText>
    <label>Default Operations Department</label>
    <length>18</length>
    <type>Text</type>
</CustomField>