force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Default_VP_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_VP_Status__c</fullName>
    <description>Default status for newly created Village Presence record.</description>
    <inlineHelpText>Default status for newly created Village Presence record.</inlineHelpText>
    <label>Default VP Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>