force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Dummy_Opportunity_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Opportunity_Record_Type_ID__c</fullName>
    <description>If Create Dummy Opportunities is ON, this setting will define which opp. record type to create the opp as</description>
    <inlineHelpText>If Create Dummy Opportunities is ON, this setting will define which opp. record type to create the opp as</inlineHelpText>
    <label>Dummy Opportunity Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>