force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Lead_Source_Text_Values__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Text_Values__c</fullName>
    <description>Comma separated list of available lead source text values to display on guest creation screen</description>
    <inlineHelpText>Comma separated list of available lead source text values to display on guest creation screen</inlineHelpText>
    <label>Lead Source Text Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>