force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Retail_Live_Email__c.field-meta.xml
<CustomField>
    <fullName>Retail_Live_Email__c</fullName>
    <description>The email address used by the Retail Live email service. This is used by the SF1 Custom Action to post a message.</description>
    <inlineHelpText>The email address used by the Retail Live email service. This is used by the SF1 Custom Action to post a message.</inlineHelpText>
    <label>Retail Live Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>