force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Retail_Live_Subject_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Retail_Live_Subject_Prefix__c</fullName>
    <description>Subject Prefix text for Retail LIVE emails.</description>
    <inlineHelpText>Subject Prefix text for Retail LIVE emails.</inlineHelpText>
    <label>Retail Live Subject Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>