force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Salesforce_Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Instance_URL__c</fullName>
    <defaultValue>&quot;https://login.salesforce.com&quot;</defaultValue>
    <description>The base URL of the Salesforce instance. This can be referenced from external sites to provide links back the relevant Salesforce instance.</description>
    <inlineHelpText>The base URL of the Salesforce instance. This can be referenced from external sites to provide links back the relevant Salesforce instance.</inlineHelpText>
    <label>Salesforce Instance URL</label>
    <type>Url</type>
</CustomField>