force-app/main/default/objects/VR1_Configuration_Settings__c/fields/Tenancy_Posts__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Posts__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether to post to Tenancy chatter groups when Events are created against Opportunities.</description>
    <inlineHelpText>Determines whether to post to Tenancy chatter groups when Events are created against Opportunities.</inlineHelpText>
    <label>Tenancy Posts</label>
    <type>Checkbox</type>
</CustomField>